<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardBackgroundColor="@color/blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/tv_name"
                style="@style/BaseTextViewStyle"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/fruits_name" />

            <TextView
                android:id="@+id/tv_scientific_name"
                style="@style/BaseTextViewStyle"
                android:textStyle="italic"
                android:textColor="@color/gray"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                tools:text="@string/fruits_scientific_name" />

            <TextView
                style="@style/BaseTextViewStyle"
                android:text="@string/nutritional_content" />

            <TextView
                android:id="@+id/tv_nutrition"
                style="@style/BaseTextViewStyle"
                tools:text="@string/fruits_nutritional_content" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>